fix z-index navbar

--- a/style.css
+++ b/style.css
@@ -325,6 +325,10 @@ footer p {
 }
 
 @media only screen and (max-width: 768px) {
+  .container-header {
+    height: 100vh;
+  }
+
   /* Navbar */
   .nav-menu {
     position: fixed;
@@ -332,6 +336,7 @@ footer p {
     top: 5rem;
     flex-direction: column;
     background-color: white;
+    z-index: 1;
     width: 100%;
     border-radius: 10px;
     text-align: center;
